--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2>About Me</h2>
         <div class="about-content">
             <img src="Me.jpeg" alt="Sathishkumar">
-            <p>Hello! I'm Sathishkumar, Aspiring Frontend developer with a strong foundation in JavaScript, HTML, and CSS. Passionate about creating engaging and interactive web applications using modern technologies. Adept at using GitHub for version control and collaboration.</p>
+            <p>Hello! I'm Sathishkumar, Aspiring a Web Developer with a strong foundation in JavaScript, HTML, and CSS. Passionate about creating engaging and interactive web applications using modern technologies. Adept at using GitHub for version control and collaboration.</p>
         </div>
     </section>
 
